# riboseek

./: .gitmodules  CMakeLists.txt
.github/workflows/: Dockerfile.GPU-buster-cross-sbsa  Dockerfile.GPU-manylinux2014  Dockerfile.GPU-manylinux_2_28  build.yml  test-gpu.yml
data/: blastdigp.sh
lib/infernal/: CMakeLists.txt  InfernalBridge.cpp
lib/infernal/config/: esl_config.h  p7_config.h
lib/mmseqs/lib/libmarv/src/: cudasw4.cuh  gapless_kernel_config.cuh  marv.cu  marv.h
lib/mmseqs/src/alignment/: PSSMCalculator.cpp
lib/mmseqs/src/commons/: BaseMatrix.cpp
lib/mmseqs/src/prefiltering/: ungappedprefilter.cpp
lib/mmseqs/src/util/: makepaddedseqdb.cpp  offsetalignment.cpp  result2dnamsa.cpp  result2msa.cpp  result2profile.cpp
lib/mmseqs/src/workflow/: CreateIndex.cpp
src/: CMakeLists.txt  LocalParameters.cpp  LocalParameters.h  RiboseekBase.cpp  riboseek.cpp
src/commons/: CMakeLists.txt  DinucleotideMapping.cpp  DinucleotideMapping.h  RNAFoldBridge.h  RnaFoldingBridge.h
src/prefiltering/: PrefilteringIndexReader.cpp
src/rnautils/: CMakeLists.txt  CmBuild.cpp  CmScan.cpp  GenerateCm.cpp  RnaAlign.cpp
src/util/: indexdb.cpp
src/workflow/: RnaSearch.cpp
util/: update_tornadofold.sh
util/regression/: print_ROC1_AUC.sh  roc1.awk  run_regression.sh
util/regression/data/: rfam_lookup_target_clan.tsv.zst  target.tsv.zst
util/regression/regression/: run_cmsearch.sh  run_search.sh
